refactor: basic info

--- a/blog/2023-09-17-cpython探究.md
+++ b/blog/2023-09-17-cpython探究.md
@@ -1,4 +1,9 @@
-# cpython 探究
+---
+slug: Initial Exploration of Cpython
+title: Initial Exploration of Cpython
+authors: Zzhiter
+tags: [Python, C]
+---
 
 ## 一元操作符 && 获取标签对应代码的地址
 
